--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     <pre id="object"></pre>
+    <form>
+        <input type="text" id="trainName">
+        <input type="text" id="destination">
+        <input type="text" id="arrival">
+        <input type="text" id="frequency">
+
+    <button id="submit">Submit</button>    
+
+
+
+    </form>
+
+<table>
+    <tr><th>Train Name</th><th>Destination</th><th>Frequency</th><th>Next Arrival</th><th>Time</th></tr>
+    <tbody></tbody>
+
+</table>    
 
 <script src="assets/data.js"></script>    
 </body>
