--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <div class="container">
             <div class="page-header">
-                    <h1>Train Scheduler <small>get where you're going on time. every time.</small></h1>
-                  </div>
+                    <h1>Train Scheduler <small>get to where you're going on time. every time.</small></h1>
+            </div>
+
             <div class="row">
                 <form>
                 <div class="col-md-3">Train Name:<input type="text" id="trainName"></div>
@@ -24,9 +25,9 @@
                 <div class="col-md-3">Frequency:<input type="text" id="frequency"></div>
                 </form> 
             </div>  
+            <br>
             <div class="row">
                 <div class="col-md-12"><button id="submit">Submit</button></div>    
-            
             </div>    
             <table>
                     
