--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                         <tr>
                             <th id="tr">Train Name</th>
                             <th id="dest">Destination</th>
-                            <th id="next">Next Arrival</th>
-                            <th id="freq">Frequency</th>
-                            <th id="time">Time</th>
+                            <th id="next">First Train</th>
+                            <th id="freq">Frequency (minutes)</th>
+                            <th id="time">Next Arrival</th>
                         </tr>
                         <tbody></tbody>
             </table>
